--- a/stories/index.html
+++ b/stories/index.html
@@ -2202,6 +2202,12 @@
       <td><a name="tl0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0004</td>
+      <td><a href="/stories/tl/0004_si-kambing-si-aso-at-si-baka_slides.html" target="_blank">Si Kambing, Si Aso, at Si Baka</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0006</td>
       <td><a href="/stories/tl/0006_si-anansi-at-ang-dunong_slides.html" target="_blank">Si Anansi at ang Dunong</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2232,6 +2238,12 @@
       <td><a name="tl0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="/stories/tl/0052_si-simbegwire_slides.html" target="_blank">Si Simbegwire</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0066</td>
       <td><a href="/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok_slides.html" target="_blank">Si Nozibele at ang Tatlong Hibla ng Buhok</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2242,6 +2254,12 @@
       <td><a href="/stories/tl/0067_pagluto_slides.html" target="_blank">Pagluto</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0072</td>
+      <td><a href="/stories/tl/0072_ang-paghihiganti-ng-pastol-ng-pulut-pukyutan_slides.html" target="_blank">Ang Paghihiganti ng Pastol ng Pulut-Pukyutan</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -2262,10 +2280,28 @@
       <td><a name="tl0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0095</td>
+      <td><a href="/stories/tl/0095_magaling-si-zama_slides.html" target="_blank">Magaling si Zama!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0110</td>
+      <td><a href="/stories/tl/0110_maliit-na-binhi-ang-kuwento-ni-wangari-maathai_slides.html" target="_blank">Maliit na Binhi: Ang Kuwento ni Wangari Maathai</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0111</td>
       <td><a href="/stories/tl/0111_bakit-walang-buhok-ang-mga-hippo_slides.html" target="_blank">Bakit walang buhok ang mga hippo</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0112</td>
+      <td><a href="/stories/tl/0112_ang-aking-katawan_slides.html" target="_blank">Ang aking katawan</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0120</td>
@@ -2292,10 +2328,34 @@
       <td><a name="tl0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0141</td>
+      <td><a href="/stories/tl/0141_si-manok-at-si-milipid_slides.html" target="_blank">Si Manok at Si Milipid</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0156</td>
       <td><a href="/stories/tl/0156_ang-buwayang-gutom_slides.html" target="_blank">Ang buwayang gutom</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0158</td>
+      <td><a href="/stories/tl/0158_ang-inahin-at-ang-agila_slides.html" target="_blank">Ang Inahin at ang Agila</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0201</td>
+      <td><a href="/stories/tl/0201_batang-asno_slides.html" target="_blank">Batang Asno</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0210</td>
+      <td><a href="/stories/tl/0210_si-tingi-at-ang-mga-baka_slides.html" target="_blank">Si Tingi at ang mga Baka</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -2338,6 +2398,12 @@
       <td><a href="/stories/tl/0291_sabi-ng-ate-ni-vusi_slides.html" target="_blank">Sabi ng ate ni Vusi</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tl0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0294</td>
+      <td><a href="/stories/tl/0294_ang-mga-saging-ni-lola_slides.html" target="_blank">Ang mga saging ni Lola</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2ZUX082QnFEc1U"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0296</td>
@@ -2440,7 +2506,7 @@
       <td>0004</td>
       <td><a href="http://my.africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0004">ko</a>, <a href="#zh0004">zh</a></td>
+      <td><a href="#ko0004">ko</a>, <a href="#tl0004">tl</a>, <a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
@@ -2497,6 +2563,12 @@
       <td><a href="#es0050">es</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="http://my.africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#tl0052">tl</a></td>
+    </tr>
+    <tr>
       <td>0053</td>
       <td><a href="http://my.africanstorybook.org/stories/me">This is me</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
@@ -2531,6 +2603,12 @@
       <td><a href="http://my.africanstorybook.org/stories/how-many">How many?</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#yue0068">yue</a></td>
+    </tr>
+    <tr>
+      <td>0072</td>
+      <td><a href="http://my.africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#tl0072">tl</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -2578,13 +2656,19 @@
       <td>0095</td>
       <td><a href="http://my.africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#tl0095">tl</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
       <td><a href="http://my.africanstorybook.org/stories/cow-my-friend">A cow is my friend</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#gu0098">gu</a>, <a href="#zh0098">zh</a></td>
+    </tr>
+    <tr>
+      <td>0110</td>
+      <td><a href="http://my.africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="#tl0110">tl</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -2596,7 +2680,7 @@
       <td>0112</td>
       <td><a href="http://my.africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#eo0112">eo</a>, <a href="#gu0112">gu</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#eo0112">eo</a>, <a href="#gu0112">gu</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#tl0112">tl</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
@@ -2650,7 +2734,7 @@
       <td>0141</td>
       <td><a href="http://my.africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0141">ko</a>, <a href="#no0141">no</a></td>
+      <td><a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#tl0141">tl</a></td>
     </tr>
     <tr>
       <td>0147</td>
@@ -2674,7 +2758,7 @@
       <td>0158</td>
       <td><a href="http://my.africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0158">ko</a></td>
+      <td><a href="#ko0158">ko</a>, <a href="#tl0158">tl</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -2701,6 +2785,12 @@
       <td><a href="#yue0199">yue</a>, <a href="#zh0199">zh</a></td>
     </tr>
     <tr>
+      <td>0201</td>
+      <td><a href="http://my.africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="#tl0201">tl</a></td>
+    </tr>
+    <tr>
       <td>0204</td>
       <td><a href="http://my.africanstorybook.org/stories/akatope">Akatope</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
@@ -2716,7 +2806,7 @@
       <td>0210</td>
       <td><a href="http://my.africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0210">es</a>, <a href="#ko0210">ko</a></td>
+      <td><a href="#es0210">es</a>, <a href="#ko0210">ko</a>, <a href="#tl0210">tl</a></td>
     </tr>
     <tr>
       <td>0212</td>
@@ -2806,7 +2896,7 @@
       <td>0294</td>
       <td><a href="http://my.africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ne0294">ne</a></td>
+      <td><a href="#ne0294">ne</a>, <a href="#tl0294">tl</a></td>
     </tr>
     <tr>
       <td>0296</td>
