--- a/stories/index.html
+++ b/stories/index.html
@@ -1998,6 +1998,36 @@
   </thead>
   <tbody>
     <tr>
+      <td>0003</td>
+      <td><a href="/stories/pa/0003_ਸਕੂਲ-ਦੇ-ਕੱਪੜੇ_slides.html" target="_blank">ਸਕੂਲ ਦੇ ਕੱਪੜੇ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0008</td>
+      <td><a href="/stories/pa/0008_ਤੁਸੀਂ-ਕੀ-ਕਰ-ਰਹੇ-ਹੋ_slides.html" target="_blank">ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/pa/0120_ਵਾਲ_slides.html" target="_blank">ਵਾਲ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0231</td>
+      <td><a href="/stories/pa/0231_ਮੌਸਮ-ਦੀ-ਕਿਤਾਬ_slides.html" target="_blank">ਮੌਸਮ ਦੀ ਕਿਤਾਬ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0271</td>
+      <td><a href="/stories/pa/0271_ਦੋ_slides.html" target="_blank">ਦੋ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0337</td>
       <td><a href="/stories/pa/0337_ਮੋਮ-ਦੇ-ਬੱਚੇ_slides.html" target="_blank">ਮੋਮ ਦੇ ਬੱਚੇ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2500,7 +2530,7 @@
       <td>0003</td>
       <td><a href="http://my.africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#gu0003">gu</a>, <a href="#ko0003">ko</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#tl0003">tl</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#gu0003">gu</a>, <a href="#ko0003">ko</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#pa0003">pa</a>, <a href="#tl0003">tl</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -2524,7 +2554,7 @@
       <td>0008</td>
       <td><a href="http://my.africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#tl0008">tl</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#pa0008">pa</a>, <a href="#tl0008">tl</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
@@ -2686,7 +2716,7 @@
       <td>0120</td>
       <td><a href="http://my.africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0120">gu</a>, <a href="#ko0120">ko</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#gu0120">gu</a>, <a href="#ko0120">ko</a>, <a href="#pa0120">pa</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0122</td>
@@ -2836,7 +2866,7 @@
       <td>0231</td>
       <td><a href="http://my.africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#ko0231">ko</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#ko0231">ko</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
@@ -2878,7 +2908,7 @@
       <td>0271</td>
       <td><a href="http://my.africanstorybook.org/stories/two">Two</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0271">gu</a>, <a href="#ko0271">ko</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#tl0271">tl</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#gu0271">gu</a>, <a href="#ko0271">ko</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#pa0271">pa</a>, <a href="#tl0271">tl</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0287</td>
