--- a/stories/index.html
+++ b/stories/index.html
@@ -2010,6 +2010,12 @@
       <td><a name="pa0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0009</td>
+      <td><a href="/stories/pa/0009_ਮੇਰੀ-ਬਿੱਲੀ-ਕਿੱਥੇ-ਹੈ_slides.html" target="_blank">ਮੇਰੀ ਬਿੱਲੀ ਕਿੱਥੇ ਹੈ?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td><a href="/stories/pa/0067_ਖਾਣਾ-ਪਕਾਉਣਾ_slides.html" target="_blank">ਖਾਣਾ ਪਕਾਉਣਾ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2566,7 +2572,7 @@
       <td>0009</td>
       <td><a href="http://my.africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#pa0009">pa</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
