--- a/stories/index.html
+++ b/stories/index.html
@@ -1590,6 +1590,12 @@
       <td><a name="no0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0006</td>
+      <td><a href="/stories/no/0006_anansi-og-visdommen_slides.html" target="_blank">Anansi og visdommen</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsVmtZTlhSZlhpQkU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0007</td>
       <td><a href="/stories/no/0007_å-lete-etter-vann_slides.html" target="_blank">Å lete etter vann</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsVmtZTlhSZlhpQkU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2554,7 +2560,7 @@
       <td>0006</td>
       <td><a href="http://my.africanstorybook.org/stories/anansi-and-wisdom">Anansi and Wisdom</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#ko0006">ko</a>, <a href="#tl0006">tl</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
+      <td><a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#tl0006">tl</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
     </tr>
     <tr>
       <td>0007</td>
