--- a/stories/index.html
+++ b/stories/index.html
@@ -756,6 +756,12 @@
       <td><a name="zh0331"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0342</td>
+      <td><a href="/stories/zh/0342_惩罚_slides.html" target="_blank">惩罚</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0359</td>
       <td><a href="/stories/zh/0359_我的狗狗_slides.html" target="_blank">我的狗狗</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3022,7 +3028,7 @@
       <td>0342</td>
       <td><a href="http://my.africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0342">ko</a>, <a href="#tl0342">tl</a></td>
+      <td><a href="#ko0342">ko</a>, <a href="#tl0342">tl</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
