--- a/translator/index.html
+++ b/translator/index.html
@@ -144,7 +144,7 @@
 <div id="dynamic_content">
     <div id="messages">Welcome to the Global-ASP Translator!<br>To get started, press the Translate! button below.</div>
     <div id="translated_msg" style="display:none">&nbsp;</div>
-    <div id="translator_div" style="display:none">Translated by: <span class="editable" contenteditable="true" oninput="localStorage['gtr_a']=this.innerHTML" id="translator" placeholder="Your name"></span></div>
+    <div id="translator_div" style="display:none">Translated by: <span class="editable" contenteditable="true" oninput="localStorage['gtr_a']=this.innerHTML" id="translator" placeholder="Your name" tabindex="2"></span></div>
 
     <div id="story_table">&nbsp;</div>
 
