--- a/stories/index.html
+++ b/stories/index.html
@@ -1644,6 +1644,12 @@
       <td><a name="no0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0110</td>
+      <td><a href="/stories/no/0110_et-lite-frø-historien-om-wangari-maathai_slides.html" target="_blank">Et lite frø: Historien om Wangari Maathai</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsVmtZTlhSZlhpQkU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="/stories/no/0112_kroppen-min_slides.html" target="_blank">Kroppen min</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsVmtZTlhSZlhpQkU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2722,7 +2728,7 @@
       <td>0110</td>
       <td><a href="http://my.africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0110">tl</a></td>
+      <td><a href="#no0110">no</a>, <a href="#tl0110">tl</a></td>
     </tr>
     <tr>
       <td>0111</td>
