--- a/stories/index.html
+++ b/stories/index.html
@@ -660,6 +660,12 @@
       <td><a name="zh0199"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0201</td>
+      <td><a href="/stories/zh/0201_驴孩子_slides.html" target="_blank">驴孩子</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0206</td>
       <td><a href="/stories/zh/0206_牙齿_slides.html" target="_blank">牙齿</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -754,6 +760,12 @@
       <td><a href="/stories/zh/0331_雨_slides.html" target="_blank">雨</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="zh0331"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/zh/0337_蜡做的孩子_slides.html" target="_blank">蜡做的孩子</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0342</td>
@@ -1690,6 +1702,12 @@
       <td><a href="/stories/no/0156_den-sultne-krokodillen_slides.html" target="_blank">Den sultne krokodillen</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsVmtZTlhSZlhpQkU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="no0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0158</td>
+      <td><a href="/stories/no/0158_høne-og-ørn_slides.html" target="_blank">Høne og Ørn</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsVmtZTlhSZlhpQkU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -2818,7 +2836,7 @@
       <td>0158</td>
       <td><a href="http://my.africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0158">ko</a>, <a href="#tl0158">tl</a></td>
+      <td><a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#tl0158">tl</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -2848,7 +2866,7 @@
       <td>0201</td>
       <td><a href="http://my.africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0201">tl</a></td>
+      <td><a href="#tl0201">tl</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -3022,7 +3040,7 @@
       <td>0337</td>
       <td><a href="http://my.africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0337">ko</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#tl0337">tl</a></td>
+      <td><a href="#ko0337">ko</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#tl0337">tl</a>, <a href="#zh0337">zh</a></td>
     </tr>
     <tr>
       <td>0341</td>
