--- a/stories/index.html
+++ b/stories/index.html
@@ -81,6 +81,8 @@
 
 <li class="toc"><a href="#danish">Danish [dansk]</a></li><br>
 
+<li class="toc"><a href="#dutch">Dutch [Nederlands]</a></li><br>
+
 <li class="toc"><a href="#esperanto">Esperanto [Esperanto]</a></li><br>
 
 <li class="toc"><a href="#german">German [Deutsch]</a></li><br>
@@ -829,6 +831,33 @@
       <td><a href="/stories/da/0009_hvor-er-min-kat_slides.html" target="_blank">Hvor er min kat?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsb21WRk1rVE5GQ00"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="da0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='dutch'>Dutch [Nederlands]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0231</td>
+      <td><a href="/stories/nl/0231_weerboek_slides.html" target="_blank">Weerboek</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0253</td>
+      <td><a href="/stories/nl/0253_mijn-prentenboek_slides.html" target="_blank">Mijn prentenboek</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -2914,7 +2943,7 @@
       <td>0231</td>
       <td><a href="http://my.africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#ko0231">ko</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
@@ -2938,7 +2967,7 @@
       <td>0253</td>
       <td><a href="http://my.africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#aeb0253">aeb</a>, <a href="#ar0253">ar</a>, <a href="#bn0253">bn</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#aeb0253">aeb</a>, <a href="#ar0253">ar</a>, <a href="#bn0253">bn</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nl0253">nl</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0262</td>
