--- a/stories/index.html
+++ b/stories/index.html
@@ -704,6 +704,12 @@
       <td><a name="zh0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0243</td>
+      <td><a href="/stories/zh/0243_和奶奶一起过暑假_slides.html" target="_blank">和奶奶一起过暑假</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0248</td>
       <td><a href="/stories/zh/0248_我去动物园_slides.html" target="_blank">我去动物园</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -726,6 +732,12 @@
       <td><a href="/stories/zh/0271_两个_slides.html" target="_blank">两个</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="zh0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/zh/0296_卖香蕉的汤姆_slides.html" target="_blank">卖香蕉的汤姆</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -2955,7 +2967,7 @@
       <td>0243</td>
       <td><a href="http://my.africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0243">tl</a></td>
+      <td><a href="#tl0243">tl</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
@@ -3009,7 +3021,7 @@
       <td>0296</td>
       <td><a href="http://my.africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0296">ko</a>, <a href="#tl0296">tl</a></td>
+      <td><a href="#ko0296">ko</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
